# claude-session-watcher

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  WORKLOG.md  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-edit.ps1
.github/workflows/: ci.yml  docker.yml  package-cli.yml
docs/: CLI_COMMANDS.md  HELP.md  MAC_ARM64_TEST_RUNBOOK.md  NATIVE_APP.md  PACKAGING.md  PACKAGING_IMPLEMENTATION_PLAN.md  PLATFORM_SUPPORT.md  PLAYWRIGHT_E2E.md  USAGE_LIMITS.md
scripts/: build_cli_bundle.py  csw_entry.py  npm-launcher.mjs  playwright_verify_login_flow.py  trace_remote_control.py
src/claude_session_watcher/: app.py  background_service.py  browser.py  cli.py  controller.py  desktop_runtime.py  discovery.py  display.py  engine.py  formatting.py  insights.py  models.py  native_app.py  notifications.py  oauth_usage.py  pause_templates.py  probe.py  profile_cookies.py  providers.py  service_control.py  session_list.py  settings.py  store.py  usage.py  watcher.py
src/claude_session_watcher/static/: styles.css
src/claude_session_watcher/templates/: browser_console.html  index.html  watcher_edit.html
tests/: test_app_security.py  test_browser_console_url.py  test_browser_discovery_wait.py  test_browser_launch_cleanup.py  test_browser_plan_switch.py  test_cli.py  test_cloudflare_block.py  test_controller.py  test_discovery.py  test_engine.py  test_formatting.py  test_insights.py  test_oauth_usage.py  test_profile_cookies.py  test_providers.py  test_service_control.py  test_session_list.py  test_settings.py  test_store.py  test_usage.py  test_usage_fallback_auth.py  test_watcher_service.py
