[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "claude-session-watcher"
version = "0.1.0b2"
description = "Background watcher that pauses and resumes Claude Code Remote Control sessions near usage limits."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "PiefkePaul" }]
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
lite = []
full = [
  "camoufox==0.4.11",
  "fastapi>=0.124.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.38.0",
]
dev = [
  "camoufox==0.4.11",
  "fastapi>=0.124.0",
  "jinja2>=3.1.6",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "python-multipart>=0.0.20",
  "ruff>=0.15.12",
  "uvicorn[standard]>=0.38.0",
]

[project.scripts]
claude-session-watcher = "claude_session_watcher.cli:main"
csw = "claude_session_watcher.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_session_watcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
